# WebCamChanger

./: .gitignore  Cargo.toml  README.md  virtual-camera-router-spec.md
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/media-pipeline/: Cargo.toml
crates/media-pipeline/src/: lib.rs
crates/virtual-camera-bridge/: Cargo.toml
crates/virtual-camera-bridge/src/: lib.rs
docs/: architecture.md  implementation-plan.md  spike-notes.md  testing.md
native/windows-virtual-camera/: CMakeLists.txt
native/windows-virtual-camera/include/: chinaski_directshow_filter.h  chinaski_directshow_guids.h  chinaski_virtual_camera.h
native/windows-virtual-camera/src/: directshow_filter.cpp  directshow_registration.cpp  vcamctl.cpp  virtual_camera_registration.cpp
scripts/: build.ps1  check-virtual-camera.ps1  install-virtual-camera.ps1  package-desktop.ps1  uninstall-virtual-camera.ps1
