[package]
name = "chinaski-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "chinaski_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
app-core = { path = "../../../crates/app-core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "1"

